--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.7.2",
+    "mongoose": "^6.1.6",
     "next": "12.0.8",
     "react": "17.0.2",
     "react-dom": "17.0.2"
