--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.7.2",
+    "cors": "^2.8.5",
     "mongoose": "^6.1.6",
     "next": "12.0.8",
     "react": "17.0.2",
