--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
-    "eslint": "8.6.0",
+    "@babel/core": "^7.16.10",
+    "@babel/eslint-parser": "^7.16.5",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^8.6.0",
     "eslint-config-next": "12.0.8"
   }
 }
